hw04-gc attempt 1